<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ThemeActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textPrimary"
        android:paddingTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/theme_title" />

    <RadioGroup
        android:id="@+id/themeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <RadioButton
            android:id="@+id/themeDark"
            android:layout_width="match_parent"
            android:textColor="@color/textSecondary"
            android:layout_height="wrap_content"
            android:text="@string/light_theme" />

        <RadioButton
            android:id="@+id/themeLight"
            android:layout_width="match_parent"
            android:textColor="@color/textSecondary"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>