<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:maxads="http://schemas.applovin.com/android/1.0">

    <data>

        <variable
            name="viewModel"
            type="com.ayodkay.apps.swen.view.theme.ThemeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:text="@string/theme_title"
            android:textColor="@color/textPrimary"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/themeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:checkedButton="@id/themeSystem"
            android:onCheckedChanged="@{(radioGroup,id)->viewModel.checkedChangeListener(id)}"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/title">

            <RadioButton
                android:id="@+id/themeDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.themeDark}"
                android:text="@string/light_theme"
                android:textColor="@color/textSecondary" />

            <RadioButton
                android:id="@+id/themeLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.themeLight}"
                android:text="@string/dark_theme"
                android:textColor="@color/textSecondary" />

            <RadioButton
                android:id="@+id/themeSystem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.themeDefault}"
                android:text="@string/system_theme"
                android:textColor="@color/textSecondary" />

        </RadioGroup>

        <com.applovin.mediation.ads.MaxAdView
            android:id="@+id/maxAdviewBanner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/banner_height"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:loadBannerAd="@{viewModel.loadAd}"
            maxads:adUnitId="6d2eada63140e252" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>