<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:maxads="http://schemas.applovin.com/android/1.0"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/background"
    tools:context=".view.viewnews.ViewNewActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/dTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/textPrimary" />

                <TextView
                    android:id="@+id/content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/textSecondary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:weightSum="3"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/full_article"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:insetLeft="0dp"
                        android:insetTop="0dp"
                        android:insetRight="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/full_article" />

                    <RelativeLayout
                        android:id="@+id/shareView"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="48dp"
                        android:layout_gravity="start">

                        <ImageView
                            android:id="@+id/share"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:contentDescription="@string/share"
                            android:src="@drawable/ic_share" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/playView"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:visibility="gone"
                        android:layout_height="48dp"
                        android:layout_gravity="start">

                        <ImageView
                            android:id="@+id/play"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:contentDescription="@string/play_button_content_description"
                            android:src="@drawable/ic_baseline_play_arrow_24" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/stopView"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_gravity="start"
                        android:layout_weight="0.5"
                        android:visibility="gone">

                        <ImageView
                            android:id="@+id/stop"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:contentDescription="@null"
                            android:src="@drawable/ic_baseline_stop_24" />
                    </RelativeLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.applovin.mediation.ads.MaxAdView
                        android:id="@+id/maxAdviewBanner"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/banner_height"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="10dp"
                        maxads:adUnitId="6d2eada63140e252" />
                </RelativeLayout>
            </LinearLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>